# ProyectoRVR

./: .gitignore  README.md  hq
PongArkanoid/: CMakeLists.txt  build.sh  installSDLCMake.sh
PongArkanoid/game/: BlockWall.cpp  BlockWall.h  Bullet.cpp  Bullet.h  Color.h  GameMessage.cpp  GameMessage.h  Logic.cpp  Logic.h  NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  Paddle.cpp  Paddle.h  SDLGame.cpp  SDLGame.h  Socket.cc  Socket.h  main.cpp
TPV2/: CLIENT.bat  CMakeLists.txt  SERVER.bat
TPV2/TPV2/: BulletInfo.h  BulletsPool.h  BulletsSystem.cpp  BulletsSystem.h  CellInfo.h  CollisionSystem.cpp  CtrlKeys.h  FightersSystem.cpp  FightersSystem.h  GameCtrlSystem.cpp  GameCtrlSystem.h  InputHandler.cpp  InputHandler.h  Manager.h  MapSystem.cpp  MapSystem.h  Messages.cc  Messages.h  Networking.cpp  Networking.h  NetworkingSystem.cpp  ProyectoRVR  RenderSystem.cpp  Resources.cpp  Resources.h  SDLGame.cpp  SDLGame.h  Singleton.h  Socket.cc  Socket.h  StarWars.cpp  StarWars.h  TPV2.vcxproj  TPV2.vcxproj.filters  ecs.h  main.cpp  messages.h
TPV2/TPV2/Debug/: TPV2Debug.exe.recipe  vc142.idb
TPV2/TPV2/Debug/TPV2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TPV2.lastbuildstate  TPV2.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
TPV2/TPV2/x64/Debug/: vc142.idb
TPV2/TPV2/x64/Debug/TPV2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TPV2.lastbuildstate  link.delete.1.tlog
